Fixes: nearby_devices lookup Adds: bluetooth BLE Fixes: DBUS_SYSTEM_BUS_ADDRESS

--- a/ui/index.html
+++ b/ui/index.html
@@ -97,7 +97,7 @@
         </div>
       </div>
 
-      <div class="row hidden" id='no-networks-message'>
+      <div class="row hidden" id='no-devices-message'>
         <div class="col-lg-8 col-lg-offset-1">
           <h3>No Bluetooth device available</h3>
           <p>Please ensure there is a discoverable device within range and reboot the device.</p>
